--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@aws-amplify/ui-react": "^6.1.13",
-    "aws-amplify": "^6.4.0",
+    "@aws-amplify/api": "^6.0.49",
+    "@aws-amplify/auth": "^6.4.0",
+    "@aws-amplify/core": "^6.4.0",
+    "@aws-amplify/ui-react": "^6.3.1",
+    "aws-amplify": "^6.6.0",
     "next": "14.1.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-markdown": "^9.0.1",
+    "react-simplemde-editor": "^5.2.0"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.0.4",
@@ -21,6 +26,9 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.11",
     "typescript": "^5.3.2"
   }
 }
